k8s/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questions-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: questions
          image: ghcr.io/your-org/questions:1.0.0-dev
